--- a/ERS_Project_1/src/main/webapp/index.html
+++ b/ERS_Project_1/src/main/webapp/index.html
@@ -12,6 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" media="screen" href="css/app.css">
   <link rel="stylesheet" type="text/css" media="screen" href="css/home.css">
+  <link rel="stylesheet" type="text/css" href="" id="dynamic-css">
 </head>
 
 <body>
@@ -22,19 +23,14 @@
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Link 1</a>
+        <a class="nav-link" href="#">Home</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link 2</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link 3</a>
       </li>
     </ul>
   </nav>
 
-  <div id="servlet-content">
-    
+  <div id="app-view">
+      
   </div>
 
 </body>
