--- a/ERS_Project_1/src/main/webapp/index.html
+++ b/ERS_Project_1/src/main/webapp/index.html
@@ -7,9 +7,7 @@
   <title>ERS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  
   <link rel="stylesheet" type="text/css" media="screen" href="css/app.css">
   <link rel="stylesheet" type="text/css" media="screen" href="css/home.css">
   <link rel="stylesheet" type="text/css" href="" id="dynamic-css">
@@ -32,7 +30,11 @@
   <div id="app-view">
       
   </div>
-
+  <script id="dynamic-js" src=""></script>
+    <script src="js/app.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
