--- a/ERS_Project_1/src/main/webapp/index.html
+++ b/ERS_Project_1/src/main/webapp/index.html
@@ -15,7 +15,7 @@
 <body>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="#"><img src="../resources/logo.png" id="logo" /></a>
+    <a class="navbar-brand" href="#"><img src="C:\Users\marco\Desktop\Revature Training\Project 1 github\Revature-Project-1\ERS_Project_1\src\main\resources\logo.png" id="logo" /></a>
 
     <!-- Links -->
     <ul class="navbar-nav">
@@ -31,7 +31,7 @@
       <div class="container">
         <div class="row">
           <div class="col"></div>
-          <div class="col"><img src="../resources/logo.png" id="hero" /></div>
+          <div class="col"><img src="C:\Users\marco\Desktop\Revature Training\Project 1 github\Revature-Project-1\ERS_Project_1\src\main\resources\logo.png" id="hero" /></div>
           <div class="col"></div>
         </div>
   
@@ -40,14 +40,16 @@
           with over 4 months combined programming experience! Our team is well versed on how to google problems and uses
           fine websites such as W3Schools, Google, and Stack Overflow to deliver the finest quality programs straight to
           you!</p>
+          
+          <div id='btn-group'>
+            <button type="button" class="btn btn-warning" data-toggle="modal"
+              data-target="#loginModal">Login</button>
+            <button type="button" class="btn btn-warning" data-toggle="modal"
+              data-target="#regModal">Register</button>
+          </div>
       </div>
     </div>
-    <div id='btn-group'>
-      <button type="button" class="btn btn-warning" data-toggle="modal"
-        data-target="#loginModal">Login</button>
-      <button type="button" class="btn btn-warning" data-toggle="modal"
-        data-target="#regModal">Register</button>
-    </div>
+    
     <!-- The Login Modal -->
     <div class="modal fade" id="loginModal">
       <div class="modal-dialog">
