progress on employee.html

--- a/ERS_Project_1/src/main/webapp/index.html
+++ b/ERS_Project_1/src/main/webapp/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="#"><img src="C:\Users\marco\Desktop\Revature Training\Project 1 github\Revature-Project-1\ERS_Project_1\src\main\resources\logo.png" id="logo" /></a>
 
