fixed modal button

--- a/ERS_Project_1/src/main/webapp/index.html
+++ b/ERS_Project_1/src/main/webapp/index.html
@@ -74,7 +74,7 @@
             <div class="alert alert-danger" id = "alert-msg">
                 <strong>Invalid Credentials!</strong>
               </div>
-            <button type="submit" class="btn btn-warning" id='to-login'>Submit</button>
+            <button type="submit" class="btn btn-warning" id='to-login' data-dismiss="modal">Submit</button>
           </div>
   
           <!-- Login Modal footer -->
@@ -118,7 +118,7 @@
               <label for="reg-email">Email:</label>
               <input type="email" class="form-control" id="register-email" name="email">
             </div>
-            <button type="submit" class="btn btn-warning" id='to-register'>Submit</button>
+            <button type="submit" class="btn btn-warning" id='to-register' data-dismiss="modal">Submit</button>
           </div>
   
           <!-- Modal footer -->
