--- a/ERS_Project_1/src/main/webapp/index.html
+++ b/ERS_Project_1/src/main/webapp/index.html
@@ -15,7 +15,7 @@
 <body>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="#"><img src="../resources/logo.png" id="logo" /></a>
+    <a class="navbar-brand" href="#"><img src="C:/Users/marco/Desktop/Revature Training/Project 1 github/Revature-Project-1/ERS_Project_1/src/main/resources/logo.png" id="logo" /></a>
 
     <!-- Links -->
     <ul class="navbar-nav">
@@ -33,7 +33,7 @@
       <div class="container">
         <div class="row">
           <div class="col"></div>
-          <div class="col"><img src="../resources/logo.png" id="hero" /></div>
+          <div class="col"><img src="C:\Users\marco\Desktop\Revature Training\Project 1 github\Revature-Project-1\ERS_Project_1\src\main\resources\logo.png" id="hero" /></div>
           <div class="col"></div>
         </div>
   
@@ -67,11 +67,11 @@
           <div class="modal-body">
             <div class="form-group">
               <label for="usr">Username:</label>
-              <input type="text" class="form-control" id="usr" name="username">
+              <input type="text" class="form-control" id="usr" name="username" required>
             </div>
             <div class="form-group">
               <label for="pwd">Password:</label>
-              <input type="password" class="form-control" id="pwd" name="password">
+              <input type="password" class="form-control" id="pwd" name="password" required>
             </div>
             <div class="alert alert-danger" id = "alert-msg">
                 <strong>Invalid Credentials!</strong>
@@ -102,23 +102,23 @@
           <div class="modal-body">
             <div class="form-group">
               <label for="usr">Username:</label>
-              <input type="text" class="form-control" id="register-username" name="username">
+              <input type="text" class="form-control" id="register-username" name="username" required>
             </div>
             <div class="form-group">
               <label for="pwd">Password:</label>
-              <input type="password" class="form-control" id="register-password" name="password">
+              <input type="password" class="form-control" id="register-password" name="password" required>
             </div>
             <div class="form-group">
               <label for="reg-fname">First Name:</label>
-              <input type="text" class="form-control" id="register-fn" name="First name">
+              <input type="text" class="form-control" id="register-fn" name="First name" required>
             </div>
             <div class="form-group">
               <label for="reg-lname">Last Name:</label>
-              <input type="text" class="form-control" id="register-ln" name="Last name">
+              <input type="text" class="form-control" id="register-ln" name="Last name" required>
             </div>
             <div class="form-group">
               <label for="reg-email">Email:</label>
-              <input type="email" class="form-control" id="register-email" name="email">
+              <input type="email" class="form-control" id="register-email" name="email" required>
             </div>
             <button type="submit" class="btn btn-warning" id='to-register' data-dismiss="modal">Submit</button>
           </div>
