--- a/ERS_Project_1/src/main/webapp/index.html
+++ b/ERS_Project_1/src/main/webapp/index.html
@@ -14,13 +14,11 @@
 
 <body>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-    <!-- Brand/logo -->
-    <a class="navbar-brand" href="#"><img src="C:/Users/marco/Desktop/Revature Training/Project 1 github/Revature-Project-1/ERS_Project_1/src/main/resources/logo.png" id="logo" /></a>
-
+    
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link">ERS Reimbursement Systems</a>
+        <a class="navbar-brand">ERS Reimbursement Systems</a>
       </li>
       <li class="nav-item">
         <a class="nav-link d-flex flex-row-reverse"><button class="btn btn-danger" id="to-logout">Logout</button></a>
@@ -33,7 +31,6 @@
       <div class="container">
         <div class="row">
           <div class="col"></div>
-          <div class="col"><img src="C:\Users\marco\Desktop\Revature Training\Project 1 github\Revature-Project-1\ERS_Project_1\src\main\resources\logo.png" id="hero" /></div>
           <div class="col"></div>
         </div>
   
