hope this is it

--- a/ERS_Project_1/src/main/webapp/index.html
+++ b/ERS_Project_1/src/main/webapp/index.html
@@ -14,11 +14,12 @@
 
 <body>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <!-- Brand/logo -->
     
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="navbar-brand">ERS Reimbursement Systems</a>
+        <a class="nav-brand text-warning">ERS Reimbursement Systems</a>
       </li>
       <li class="nav-item">
         <a class="nav-link d-flex flex-row-reverse"><button class="btn btn-danger" id="to-logout">Logout</button></a>
